sense = None.txt
 File "<frozen runpy>", line 198, in _run_module_as_main
  File "<frozen runpy>", line 88, in _run_code
  File "/usr/lib/python3/dist-packages/pgzero/__main__.py", line 3, in <module>
    main()
    ~~~~^^
  File "/usr/lib/python3/dist-packages/pgzero/runner.py", line 79, in main
    code = compile(src, os.path.basename(path), 'exec', dont_inherit=True)
  File "shishkebab.py", line 155
    ``
    ^
SyntaxError: invalid syntax
